<resources>
    <string name="app_name">PopularMovies</string>
    <string name="image">image</string>
    <string name="default_keyword">default</string>

    <string name="pref_sort_order_popular_label">By Popularity</string>
    <string name="pref_sort_order_popular">sort_order_popular</string>

    <string name="pref_sort_order_top_rated_label">By Top Rated</string>
    <string name="pref_sort_order_top_rated">sort_order_top_rated</string>

    <string name="pref_preferred_sort_order_key">sort_order</string>
    <string name="pref_preferred_sort_order_label">Sort Order</string>

    <string name="settings">Settings</string>
    <string name="Title">Title</string>
    <string name="Rating">Rating:&#160;</string>
    <string name="Released">Released:&#160;</string>
    <string name="Synopsis">Synopsis</string>
    <string name="failedToAccessOnlineResources">Failed to access online resources.</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="no_reviews">No Reviews at this time.</string>
    <string name="no_trailers">No Available trailers.</string>
    <string name="favorite">favorite</string>
    <string name="favorite_label">Favorite</string>
    <string name="pref_show_favorites_key">show_favorites</string>
    <string name="pref_show_favorites_summary_off">Show all movies</string>
    <string name="pref_show_favorites_summary_on">Show only favorites</string>
    <string name="pref_show_favorites_title">Show favorites</string>
</resources>
