<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_sort_order_popular"
        android:entries="@array/pref_preferred_sort_order_labels"
        android:entryValues="@array/pref_preferred_sort_order_values"
        android:key="@string/pref_preferred_sort_order_key"
        android:title="@string/pref_preferred_sort_order_label" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_favorites_default"
        android:key="@string/pref_show_favorites_key"
        android:summaryOff="@string/pref_show_favorites_summary_off"
        android:summaryOn="@string/pref_show_favorites_summary_on"
        android:title="@string/pref_show_favorites_title" />

</PreferenceScreen>