<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.popularmovies.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/details_constraint_container"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/details_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/details_activity_image_start_margin"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin"
                    android:contentDescription="@string/image"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="@dimen/details_activity_horizontal_margin"/>

                <TextView
                    android:id="@+id/release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin"
                    android:text="@string/Released"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/imageView"/>

                <TextView
                    android:id="@+id/release_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                    android:text="@string/default_keyword"
                    app:layout_constraintBottom_toBottomOf="@+id/release_date_label"
                    app:layout_constraintStart_toEndOf="@+id/release_date_label"
                    app:layout_constraintTop_toTopOf="@+id/release_date_label"
                    app:layout_constraintVertical_bias="1.0"/>

                <TextView
                    android:id="@+id/rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin"
                    android:text="@string/Rating"
                    app:layout_constraintStart_toStartOf="@+id/release_date_label"
                    app:layout_constraintTop_toBottomOf="@+id/release_date_label"/>

                <TextView
                    android:id="@+id/rating_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_keyword"
                    app:layout_constraintBottom_toBottomOf="@+id/rating_label"
                    app:layout_constraintStart_toStartOf="@+id/release_date_value"
                    app:layout_constraintTop_toTopOf="@+id/rating_label"/>

                <TextView
                    android:id="@+id/favorite_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin"
                    android:text="@string/favorite_label"
                    app:layout_constraintStart_toStartOf="@+id/rating_label"
                    app:layout_constraintTop_toBottomOf="@+id/rating_label"/>

                <ImageView
                    android:id="@+id/favorite_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_black_24dp"
                    android:contentDescription="@string/favorite"
                    app:layout_constraintBottom_toBottomOf="@+id/favorite_label"
                    app:layout_constraintStart_toStartOf="@+id/rating_value"
                    app:layout_constraintTop_toTopOf="@+id/favorite_label"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/container_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/details_linear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <!--<TextView-->
                <!--android:id="@+id/title_value"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginEnd="@dimen/details_activity_horizontal_margin"-->
                <!--android:layout_marginStart="@dimen/details_activity_horizontal_margin"-->
                <!--android:layout_marginTop="@dimen/details_activity_vertical_margin"-->
                <!--android:text="@string/Title"-->
                <!--android:textAlignment="center"-->
                <!--android:textSize="@dimen/DetailActivityTitleSize"-->
                <!--android:textStyle="bold"/>-->


            <TextView
                android:id="@+id/synopsis_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                android:layout_marginTop="@dimen/details_activity_vertical_margin_double"
                android:text="@string/Synopsis"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textSize="@dimen/DetailsActivitySynopsisLabelSize"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/synopsis_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/details_activity_horizontal_margin_subelement"
                android:layout_marginStart="@dimen/details_activity_horizontal_margin_subelement"
                android:layout_marginEnd="@dimen/details_activity_horizontal_margin_subelement"
                android:layout_marginRight="@dimen/details_activity_horizontal_margin_subelement"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:text="@string/default_keyword"/>

            <ProgressBar
                android:id="@+id/trailers_loading_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/dynamic_layouts_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trailers_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin"
                    android:text="@string/trailers"
                    android:textAllCaps="true"
                    android:textSize="@dimen/DetailsActivitySynopsisLabelSize"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailers_container"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin_subelement"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin_subelement"
                    android:layout_marginEnd="@dimen/details_activity_horizontal_margin_subelement"
                    android:layout_marginRight="@dimen/details_activity_horizontal_margin_subelement"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin_double"
                    android:columnCount="3"
                    android:orientation="vertical"/>

                <TextView
                    android:id="@+id/reviews_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:text="@string/reviews"
                    android:textAllCaps="true"
                    android:textSize="@dimen/DetailsActivitySynopsisLabelSize"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/reviews_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_activity_horizontal_margin"
                    android:layout_marginStart="@dimen/details_activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/details_activity_horizontal_margin"
                    android:layout_marginRight="@dimen/details_activity_horizontal_margin"
                    android:layout_marginTop="@dimen/details_activity_vertical_margin_double"
                    android:orientation="vertical"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
